# Github-as-a-message-queue

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/og-image-gen/: .env.example  app.py  readme.md  utils.py
examples/og-image-gen/consumers/scraper/: main.py  pre_run.sh  requirements.txt
examples/og-image-gen/templates/: index.html  website_view.html
src/: cli.py  git.py  github_manager.py  utils.py
src/githubmq/: cli.py  git.py  github_manager.py
src/githubmq/workflows/: action.yml
src/workflows/: action.yml
